--- a/posts/convert-ipython-notebook-to-pdf.ipynb
+++ b/posts/convert-ipython-notebook-to-pdf.ipynb
@@ -1,7 +1,7 @@
 {
  "metadata": {
   "name": "",
-  "signature": "sha256:67efc6af75aff07b1d38a8de3aa213140eca34fd9fb90cd1ca2d2b514843ccf8"
+  "signature": "sha256:d6bca168bcf18ad6b7ce83c376da15d55d6416f1cd3331b97c0eb5f9f0bec9b7"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -154,6 +154,13 @@
       "ipython nbconvert --to latex --template=no_code.tplx --post PDF your_ipython_notebook.ipynb\n",
       "```\n",
       "\n"
+     ]
+    },
+    {
+     "cell_type": "markdown",
+     "metadata": {},
+     "source": [
+      "Example product: <a href='example.pdf'>example.pdf</a>\n"
      ]
     },
     {
