--- a/posts/convert-ipython-notebook-to-pdf.ipynb
+++ b/posts/convert-ipython-notebook-to-pdf.ipynb
@@ -1,7 +1,7 @@
 {
  "metadata": {
   "name": "",
-  "signature": "sha256:d6bca168bcf18ad6b7ce83c376da15d55d6416f1cd3331b97c0eb5f9f0bec9b7"
+  "signature": "sha256:8eed372fdba2296c6a5ca8fe9174f77d6f35efa67a83009dd02ae2604e2fb79c"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -19,6 +19,8 @@
       "<br>\n",
       "\n",
       "**NOTEBOOK --> PDF in under 5 mins**\n",
+      "\n",
+      "Example product: <a href='example.pdf'>example.pdf</a>\n",
       "\n",
       "P.S. Instructions has only been tested on Mac Pro (Mavericks). User be cautious\n",
       "\n",
@@ -154,13 +156,6 @@
       "ipython nbconvert --to latex --template=no_code.tplx --post PDF your_ipython_notebook.ipynb\n",
       "```\n",
       "\n"
-     ]
-    },
-    {
-     "cell_type": "markdown",
-     "metadata": {},
-     "source": [
-      "Example product: <a href='example.pdf'>example.pdf</a>\n"
      ]
     },
     {
