--- a/posts/numpy-basics.ipynb
+++ b/posts/numpy-basics.ipynb
@@ -1,7 +1,7 @@
 {
  "metadata": {
   "name": "",
-  "signature": "sha256:d17e647f27dc6d21d910f06f736f8da0e7147c0a209c6f5e31f19a0a8a855ea1"
+  "signature": "sha256:78fbbc4840815ad3e2b0d10b6365a2cdc223544487368c5af38bc249af9038c0"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -38,7 +38,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 43
+     "prompt_number": 123
     },
     {
      "cell_type": "markdown",
@@ -681,13 +681,46 @@
       {
        "metadata": {},
        "output_type": "pyout",
-       "prompt_number": 84,
+       "prompt_number": 124,
        "text": [
         "[2, 1, 2, 1, 2, 1]"
        ]
       }
      ],
-     "prompt_number": 84
+     "prompt_number": 124
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "#conditiona, if true then, if false then\n",
+      "np.where()"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": [],
+     "prompt_number": 125
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "zip(*list_of_list)"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": [],
+     "prompt_number": 126
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "average of proba\n"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": []
     }
    ],
    "metadata": {}
